@@ -1,3 +1,7 @@
+2005-05-27  Albert Chu  <chu11@llnl.gov>
+
+	* Continue work on metric server.
+	
 2005-05-26  Albert Chu  <chu11@llnl.gov>
 
 	* Continue work on metric server.
